[gd_scene load_steps=16 format=2]

[ext_resource path="res://asset/texture/market/Go rope/bg 1.png" type="Texture" id=1]
[ext_resource path="res://asset/texture/market/Go rope/item_bg.png" type="Texture" id=2]
[ext_resource path="res://asset/texture/market/Go rope/Frame-1.png" type="Texture" id=3]
[ext_resource path="res://asset/texture/market/Go rope/0000 1.png" type="Texture" id=4]
[ext_resource path="res://asset/texture/market/Go rope/Unlock.png" type="Texture" id=5]
[ext_resource path="res://asset/texture/market/Go rope/Frame.png" type="Texture" id=6]
[ext_resource path="res://asset/texture/market/Go rope/Coins.png" type="Texture" id=7]
[ext_resource path="res://ScoreFont.tres" type="DynamicFont" id=8]
[ext_resource path="res://Game/Market/market.gd" type="Script" id=9]
[ext_resource path="res://asset/texture/ballF.png" type="Texture" id=10]
[ext_resource path="res://asset/texture/market/Go rope/Select.png" type="Texture" id=11]
[ext_resource path="res://asset/texture/market/Go rope/Start.png" type="Texture" id=12]
[ext_resource path="res://asset/texture/market/Go rope/acctive_item.png" type="Texture" id=13]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://asset/font/JosefinSans-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 22
font_data = SubResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 7

[node name="ItemBg" type="TextureRect" parent="."]
anchor_left = 0.488
anchor_top = 0.5
anchor_right = 0.488
anchor_bottom = 0.5
margin_left = -183.635
margin_top = -180.389
margin_right = 184.365
margin_bottom = 179.611
texture = ExtResource( 2 )
stretch_mode = 5

[node name="left" type="TextureButton" parent="."]
anchor_left = 0.49
anchor_top = 0.5
anchor_right = 0.49
anchor_bottom = 0.5
margin_left = -276.776
margin_top = -80.0
margin_right = -188.776
margin_bottom = 80.0
texture_normal = ExtResource( 3 )
stretch_mode = 4

[node name="right" type="TextureButton" parent="."]
anchor_left = 0.489
anchor_top = 0.5
anchor_right = 0.489
anchor_bottom = 0.5
margin_left = 190.264
margin_top = -80.0
margin_right = 289.264
margin_bottom = 80.0
texture_normal = ExtResource( 6 )
stretch_mode = 4

[node name="Unlock" type="TextureButton" parent="."]
anchor_left = 0.49
anchor_top = 0.5
anchor_right = 0.49
anchor_bottom = 0.5
margin_left = -83.8535
margin_top = 71.7252
margin_right = 84.1465
margin_bottom = 135.725
texture_normal = ExtResource( 5 )
stretch_mode = 4

[node name="Select" type="TextureButton" parent="."]
visible = false
margin_left = 416.0
margin_top = 377.946
margin_right = 587.0
margin_bottom = 430.946
texture_normal = ExtResource( 11 )
expand = true
stretch_mode = 4

[node name="Coins" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 35.1597
margin_top = 18.3212
margin_right = 71.1597
margin_bottom = 54.3212
texture = ExtResource( 7 )
stretch_mode = 7

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -272.418
margin_top = 10.5612
margin_right = 16.5818
margin_bottom = 63.5612
custom_colors/font_color = Color( 0.921569, 0.988235, 0.321569, 1 )
custom_fonts/font = ExtResource( 8 )
text = "0"
align = 2
valign = 1

[node name="n_e_coin" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -160.227
margin_top = 435.686
margin_right = 139.773
margin_bottom = 475.686
custom_colors/font_color = Color( 0.921569, 0.988235, 0.321569, 1 )
custom_fonts/font = SubResource( 2 )
text = "Not enough coin"
align = 1
valign = 1

[node name="items" type="Control" parent="."]
anchor_left = 0.487
anchor_top = 0.5
anchor_right = 0.487
anchor_bottom = 0.5
margin_left = -98.1022
margin_top = -143.314
margin_right = 98.8978
margin_bottom = 49.6863

[node name="item" type="TextureRect" parent="items"]
visible = false
anchor_left = 0.513
anchor_top = 0.5
anchor_right = 0.513
anchor_bottom = 0.5
margin_left = -98.061
margin_top = -96.5
margin_right = 97.939
margin_bottom = 99.5
texture = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="item2" type="TextureRect" parent="items"]
anchor_left = 0.515
anchor_top = 0.5
anchor_right = 0.515
anchor_bottom = 0.5
margin_left = -75.4134
margin_top = -79.5295
margin_right = 75.5866
margin_bottom = 71.4705
texture = ExtResource( 10 )
expand = true
stretch_mode = 5

[node name="Start" type="TextureButton" parent="."]
anchor_left = 0.95
anchor_top = 0.94
anchor_right = 0.95
anchor_bottom = 0.94
margin_left = -208.343
margin_top = -72.9239
margin_right = -0.342773
margin_bottom = 0.0761108
texture_normal = ExtResource( 12 )
expand = true
stretch_mode = 4

[node name="AcctiveItem" type="TextureRect" parent="."]
anchor_left = 0.49
anchor_top = 0.5
anchor_right = 0.49
anchor_bottom = 0.5
margin_left = -110.76
margin_top = -147.0
margin_right = 110.24
margin_bottom = 57.0
texture = ExtResource( 13 )
expand = true

[connection signal="pressed" from="left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="right" to="." method="_on_right_pressed"]
[connection signal="pressed" from="Unlock" to="." method="_on_Unlock_pressed"]
[connection signal="pressed" from="Select" to="." method="_on_Select_pressed"]
